# ArrEm-sync

./: .dockerignore  .env.example  .gitignore  .mise.toml  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  renovate.json5
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: docker.yaml  docker.yml  renovate.yaml  test.yaml  test.yml
arr_tagsync/: __init__.py  cli.py  config.py  emby_client.py  errors.py  sync_service.py
arrem_sync/: __init__.py  arr_client.py  cli.py  client_factory.py  config.py  emby_client.py  errors.py  http_utils.py  multi_sync_service.py  sync_service.py  types.py  version.py
tests/: conftest.py  test_arr_client.py  test_cli.py  test_config.py  test_dry_run_env.py  test_emby_client.py  test_env_file_loading.py  test_errors.py  test_init.py  test_multi_instance_cli.py  test_multi_instance_config.py  test_sync_service.py
